Document usage.